[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = "0.4.7"
#gtk = { version = "0.4.7", package = "gtk4" }
#gtk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gtk4" }

[[bin]]
name = "app1"
path = "examples/app1.rs"

[[bin]]
name = "app2"
path = "examples/app2.rs"

[[bin]]
name = "app3"
path = "examples/app3.rs"

[[bin]]
name = "app4"
path = "examples/app4.rs"

[[bin]]
name = "app5"
path = "examples/app5.rs"

[[bin]]
name = "custom_app"
path = "examples/subclass/custom_app/main.rs"

[[bin]]
name = "custom_button"
path = "examples/subclass/custom_button/main.rs"

[[bin]]
name = "custom_box"
path = "examples/subclass/custom_box/main.rs"

[[bin]]
name = "composite_template"
path = "examples/composite  _template/main.rs"